# veltes

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yaml
migrations/: 0001_sample.sql
src/: api.rs  app.rs  lib.rs  main.rs  proxy.rs  ui.rs
templates/: index.html  sample.html  samples.html
tests/: api.rs  samples.rs
tests/testing/: mod.rs
