[package]
name = "veltes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actually used deps
uuid = { version = "1.10", features = ["v4"] }
# velvet deps
tokio = "1"
#velvet-web = { path = "../velvet", features = ["auth", "postgres"] }
velvet-web = {version = "0.3", features=["auth", "postgres"]}
# repeated transitive dependencies because of macroing requiring them at build time
serde = "1"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
rust-embed = { version = "8.5", features = ["axum"] }
sqlx = { version = "0.8", features = ["sqlx-postgres"] }
tracing = { version = "0.1", features = ["valuable"] }
valuable = { version = "0.1", features = ["derive", "valuable-derive"] }

[dev-dependencies]
axum = "0.7"
axum-test = "15.3"
